# utility-services-hub

./: .env.example  .gitignore  package-lock.json  package.json
apps/api/: pyproject.toml
apps/api/src/utility_services_api/: main.py
apps/api/src/utility_services_api/api/v1/: router.py
apps/api/src/utility_services_api/core/: config.py
apps/web/: package.json  tsconfig.json
